--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav>
   <img src="../../assets/image/Pokeball-Vector-Logo.png" />
-  <input type="text" placeholder="Search for Poke...." #name />
-  <button type="button" (click)="newMessage(name.value)">Search</button>
+  <input type="text" placeholder="Search for Poke...." #Input (keyup)="getValue(Input.value)" />
+ 
 </nav>
