--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,9 @@
 <nav>
   <img src="../../assets/image/Pokeball-Vector-Logo.png" />
-  <input type="text" placeholder="Search for Poke...." #Input (keyup)="getValue(Input.value)" />
- 
+  <input
+    type="text"
+    placeholder="Search for Poke...."
+    #Input
+    (keyup)="getValue(Input.value)"
+  />
 </nav>
