--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,9 +1,10 @@
 <nav>
-  <img src="../../assets/image/Pokeball-Vector-Logo.png" />
+  <h1>Pokemon List</h1>
   <input
     type="text"
     placeholder="Search for Poke...."
     #Input
     (keyup)="getValue(Input.value)"
   />
+  
 </nav>
