--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="body">
   <app-nav></app-nav>
+  <app-loader></app-loader>
   <app-pokemon-list></app-pokemon-list>
   <app-footer></app-footer>
+  
 </div>
