--- a/src/app/pokemon-list/pokemon-list.component.css
+++ b/src/app/pokemon-list/pokemon-list.component.css
@@ -6,7 +6,8 @@
   margin-top: 40px;
   justify-content: center;
 align-items: center;
-  height: auto;
+ min-height: 80vh;
+ height:auto;
 }
 .box {
   width: 10%;
@@ -18,7 +19,8 @@ align-items: center;
   margin: 35px 10px;
   position: relative;
   z-index: 3;
-  border-radius: 40px;
+  border-radius: 40px; 
+  
 }
 
 .box .description {
@@ -129,4 +131,8 @@ align-items: center;
 pagination-controls {
   text-align: center;
   width: 90%;
+}
+.error-message {
+  color:red;
+  text-align: center;
 }
