style &&  display the error msg to the user

--- a/src/app/pokemon-list/pokemon-list.component.css
+++ b/src/app/pokemon-list/pokemon-list.component.css
@@ -6,7 +6,7 @@
   margin-top: 40px;
   justify-content: center;
 align-items: center;
- min-height: 80vh;
+ min-height: 75vh;
  height:auto;
 }
 .box {
@@ -135,4 +135,6 @@ pagination-controls {
 .error-message {
   color:red;
   text-align: center;
+  font-family: "Pokemon Solid", sans-serif;
+  letter-spacing:3px;
 }
