--- a/src/app/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-list/pokemon-list.component.html
@@ -11,7 +11,7 @@
           : { itemsPerPage: 12, currentPage: page, totalItems: pokemonNumber }
     "
   >
-    <img src="../../assets/image/pokeball.png" alt="poke-ball" class="poke-ball"/>
+    <img src="../../assets/images/pokeball.png" alt="poke-ball" class="poke-ball"/>
       <div class="boxImg">
         <img
           class="firstImg"
@@ -30,14 +30,14 @@
       <p class="type">{{ pokemon.types[0].type.name | titlecase }}</p>
       <div class="description">
         <span>
-          <p><b>Weight</b>:{{ pokemon.weight / 10 }}<b> Kg</b></p>
-          <p><b>Height</b>:{{ pokemon.height / 10 }}<b> M</b></p>
-          <p><b>Health</b>:{{ pokemon.stats[0].base_stat }}</p>
+          <p><b><fa-icon [icon]="faWeight"></fa-icon></b>{{ pokemon.weight / 10 }}<b> Kg</b></p>
+          <p><b><fa-icon [icon]="faArrowsAltV"></fa-icon></b>{{ pokemon.height / 10 }}<b> M</b></p>
+          <p><b><fa-icon [icon]="faHeartbeat"></fa-icon></b>{{ pokemon.stats[0].base_stat }}</p>
         </span>
         <span>
-          <p><b>Attack</b>:{{ pokemon.stats[1].base_stat }}</p>
-          <p><b>Defense</b>:{{ pokemon.stats[2].base_stat }}</p>
-          <p><b>Speed</b>:{{ pokemon.stats[5].base_stat }}</p>
+          <p><b><fa-icon [icon]="faSkullCrossbones"></fa-icon></b>{{ pokemon.stats[1].base_stat }}</p>
+          <p><b><fa-icon [icon]="faShieldAlt"></fa-icon></b>{{ pokemon.stats[2].base_stat }}</p>
+          <p><b><fa-icon [icon]="faTachometerAlt"></fa-icon></b>{{ pokemon.stats[5].base_stat }}</p>
         </span>
       </div>
     
