fixing the search to search through all pokemon-list

--- a/src/app/loader/loader.component.css
+++ b/src/app/loader/loader.component.css
@@ -3,6 +3,6 @@
     display:flex;
     align-items: center;
     justify-content: center;
-    height:71vh;
-    
+  position:absolute;
+  top:250px;
 }
