implement routing handler

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="body">
   <app-nav></app-nav>
   <app-loader></app-loader>
-  <app-pokemon-list></app-pokemon-list>
+  <router-outlet></router-outlet>
   <app-footer></app-footer>
   
 </div>
