--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -10,6 +10,7 @@ nav {
 }
 nav:hover {
   background-color: rgb(105, 165, 243);
+  transition: ease-in-out 1s;
 }
 nav h1 {
   font-family: "Pokemon Solid", sans-serif;
@@ -24,13 +25,21 @@ nav input {
   height: 3.5vh;
   border: 1px solid rgb(167, 164, 164);
   border-radius: 10px;
-  background-color: #f5f5f5;
+  background-color:inherit;
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   text-align: center;
   letter-spacing: 2px;
 }
-@media screen and (max-width: 500px) {
+nav input:hover {
+  background-color: rgb(187, 184, 142);
+  transition:ease-in-out 3s;
+}
+mat-form-field {
+  width:8rem;
+  height:80%;
+}
+@media screen and (max-width: 600px) {
   nav { 
     width: 100%;
   }
@@ -44,4 +53,19 @@ nav input {
     margin: 0;
     letter-spacing: 1px;
   }
+  mat-form-field {
+    width: 4rem;
+  }
+  }
+  @media screen and (max-width: 320px) {
+    nav h1 {
+      font-size: 16px;
+      margin: 0;
+      letter-spacing: 0px;
+    }
+    nav input {
+      max-width: 80px;
+      font-size: 12px;
+      letter-spacing:0px
+    }
   }
