add details paage

--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,4 +1,4 @@
 <div class="not-found">
-    <h1>router not exists</h1>
+    <h1>router not Found !!!</h1>
     <a routerLink="/">back to the Home page</a>
 </div>
