add details paage

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer">
-    Made with <span class="heart">❤️</span> by Hamza Darej
-  
+    Made with <span class="heart">❤️</span> by Hamza Darej,
+    Copyright <sup> © </sup> <span className="year">{{currentYear}}</span>
 </div>
 
