--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="body">
-  <app-nav></app-nav>
+  <app-nav [title]="title" ></app-nav>
   <app-loader></app-loader>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
