--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -7,7 +7,7 @@ nav {
   border: 1px solid rgb(224, 217, 217);
   background-color: rgb(209, 223, 241);
   overflow: hidden;
-  transition: ease-in-out 1s;
+  transition: ease-in-out 0.5s;
 }
 nav:hover {
   background-color: rgb(105, 165, 243);
@@ -25,7 +25,7 @@ nav input {
   height: 3.5vh;
   border: 1px solid rgb(167, 164, 164);
   border-radius: 10px;
-  background-color:inherit;
+  background-color: rgb(209, 223, 241);
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   text-align: center;
@@ -33,7 +33,7 @@ nav input {
   transition:ease-in-out 0.5s;
 }
 nav input:hover {
-  background-color: rgb(187, 184, 142);
+  background-color: snow;
 }
 mat-form-field {
   width:8rem;
